<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_12"
    android:background="@color/grey_light">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/terms_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/terms_header"/>
        <View
            android:id="@+id/view0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/terms_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/terms_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view0"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/terms_message"/>

        <TextView
            android:id="@+id/compass_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/terms_message"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/compass_header"/>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/compass_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/compass_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/compass_message"/>

        <TextView
            android:id="@+id/flashlight_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/compass_message"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/flashlight_header"/>
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/flashlight_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/flashlight_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/flashlight_message"/>

        <TextView
            android:id="@+id/battery_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/flashlight_message"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/battery_header"/>
        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/battery_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/battery_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view3"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/battery_message"/>

        <TextView
            android:id="@+id/data_collection_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/battery_message"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/data_collection_header"/>
        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/data_collection_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/data_collection_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view4"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/data_collection_message"/>

        <TextView
            android:id="@+id/use_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/data_collection_message"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/use_header"/>
        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/use_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/use_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view5"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/use_message"/>

        <TextView
            android:id="@+id/liability_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/use_message"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/liability_header"/>
        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/liability_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/liability_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view6"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/liability_message"/>

        <TextView
            android:id="@+id/warranty_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/liability_message"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/warranty_header"/>
        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/warranty_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/warranty_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view7"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/warranty_message"/>

        <TextView
            android:id="@+id/tutorial_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/warranty_message"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingLeft="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_8"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_24"
            android:text="@string/tutorial_header"/>
        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_2"
            android:layout_below="@id/tutorial_header"
            android:background="@color/blue_light" />
        <TextView
            android:id="@+id/tutorial_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view8"
            android:paddingTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/grey_dark"
            android:text="@string/tutorial_message"/>

        <Button
            android:id="@+id/terms_button"
            android:layout_below="@id/tutorial_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_width="@dimen/flashlight_button_width"
            android:layout_height="@dimen/flashlight_button_height"
            android:textColor="@color/white"
            android:text="@string/accept_decline"
            android:background="@color/blue"/>

    </RelativeLayout>
</ScrollView>